# discours-backend

./: .README.tmp  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .lintstagedrc  .pre-commit-config.yaml  CHECKS  CHECKS.disabled  Dockerfile  InboxDockerfile  Makefile  Pipfile  README.md  alembic.ini  auth_utils.py  checks.sh  create_crt.sh  disabled-CHECKS  docker-compose.dev.yml  docker-compose.yml  generate_gql_types.sh  inbox_main.py  inbox_schema.graphql  jest.config.js  logfile  main.py  message_service.py  migrate.py  migrate.sh  nginx.conf  nginx.conf.sigil  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  resetdb.sh  robo_migrate_a2.sh  schema.auth.graphql  (+9 more)
__helpers__/: server.ts  typeorm.ts
__tests__/: server.test.ts
ai/: preprocess.py
alembic/: README  env.py
auth/: README.md  __init__.py  authenticate.py  authorize.py  credentials.py  email.py  identity.py  jwtcodec.py  oauth.py  password.py  token.py  tokenstorage.py  validations.py
base/: ackee.py  exceptions.py  orm.py  redis.py  resolvers.py
inbox_resolvers/: inbox.py
migration/: README.md  __init__.py  __main__.py  aaronsw-html2text.py  bson2json.py  export.py  extract.py  html2md.py  html2text.py  utils.py
orm/: __init__.py  _retry.py  base.py  collab.py  collection.py  comment.py  community.py  draft.py  event.py  like.py  message.py  notification.py  proposal.py  rating.py  rbac.py  reaction.py  remark.py  shout.py  topic.py  user.py  viewed.py
queries/: shout-by-slug.sql
redis/: __init__.py  client.py
resolvers/: __init__.py  auth.py  base.py  collab.py  collection.py  comments.py  community.py  editor.py  feed.py  following.py  inbox.py  load.py  migrate.py  notifications.py  profile.py  reactions.py  topics.py  upload.py  zine.py
schema/: schema.auth.graphql  schema.common.graphql  schema.messages.graphql
schemas/: ackee.graphql  core.graphql
services/: db.py  exceptions.py  following.py  inbox.py  main.py  presence.py  redis.py  schema.py  search.py  unread.py  viewed.py
src/: env.ts  main.ts  startServer.ts
storages/: reactions.py  roles.py  shoutauthor.py  shoutscache.py  topics.py  topicstat.py  (+2 more)
(+65 files in other folders)
