[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Discours DevTeam <dev@discours.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
html2text = "*"
aioredis = "*"
ariadne = "*"
PyJWT = "*"
starlette = "*"
SQLAlchemy = "*"
uvicorn = "*"
pydantic = "*"
passlib = "*"
itsdangerous = "*"
httpx = "*"
psycopg2-binary = "*"
Authlib = "*"
bson = "*"
python-frontmatter = "*"
bs4 = "*"
transliterate = "*"
psycopg2 = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
