[tool.poetry]
name = "discoursio-api"
version = "0.2.0"
description = ""
authors = ["Discours DevTeam <dev@discours.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.0"
httpx = "^0.23.0"
ariadne = "^0.15.1"
passlib = "^1.7.4"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
starlette = "^0.20.4"
PyJWT = "^2.4.0"
transliterate = "^1.10.2"
requests = "^2.28.1"
pydantic = "^1.9.1"
bson = "^0.5.10"
itsdangerous = "^2.1.2"
psycopg2-binary = "^2.9.3"
Authlib = "^1.0.1"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
